Fixed minor layout issues on projector and pdf.
Especially for motion diff view.

--- a/openslides/core/static/css/app.css
+++ b/openslides/core/static/css/app.css
@@ -740,8 +740,6 @@ img {
     color: green;
     text-decoration: underline;
 }
-.motion-text-diff p {
-}
 .motion-text-diff.line-numbers-outside .insert .os-line-number {
     display: none;
 }
